# IX-Autonomy-Assurance-Case-Runtime

./: .gitattributes  .gitignore  COMMERCIAL_ENGAGEMENT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  TESTING.md  THREAT_MODEL.md  USAGE.md
examples/: degraded-navigation-case.json  degraded-navigation-catalog.json  mission-need.json  requirements.json
schemas/: assurance-case.schema.json  evidence-bundle.schema.json  report.schema.json  run-ledger.schema.json  scenario-catalog.schema.json
tests/: test_acceptance_runtime.py  test_assurance_case.py  test_assurance_dossier.py  test_assurance_dossier_readiness.py  test_assurance_dossier_validation.py  test_authority.py  test_claim_guardrails.py  test_claim_guardrails_readiness.py  test_claim_guardrails_validation.py  test_cli.py  test_contracts.py  test_degradation.py  test_evidence.py  test_export_package.py  test_export_package_readiness.py  test_export_package_validation.py  test_federal_evaluation_profile.py  test_federal_evaluation_profile_readiness.py  test_federal_evaluation_profile_validation.py  test_framework_crosswalk.py  test_framework_crosswalk_evidence.py  test_framework_crosswalk_readiness.py  test_ledger.py  test_monitoring.py  test_monitoring_readiness.py  test_monitoring_validation.py  test_package_foundation.py  test_policy.py  test_policy_evaluator.py  test_policy_readiness.py  test_policy_waiver_evidence.py  test_prototype_readiness.py  test_prototype_rollup.py  test_prototype_rollup_12_capability_integration.py  test_prototype_target.py  test_prototype_target_alignment.py  test_provenance.py  test_provenance_readiness.py  test_provenance_verifier.py  test_public_api_12_capability_surface.py  (+19 more)
(+57 files in other folders)
