[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ix-autonomy-assurance-case-runtime"
version = "0.1.0"
description = "A Trusted Autonomy T&E assurance-case runtime for evidence-backed AI/autonomous system evaluation."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Bryce Lovell" }
]
keywords = [
  "ai-assurance",
  "autonomy",
  "test-and-evaluation",
  "assurance-case",
  "mission-assurance",
  "runtime-assurance",
  "trusted-autonomy"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Quality Assurance",
  "Typing :: Typed"
]
dependencies = []

[project.scripts]
ix-assurance = "ix_autonomy_assurance_case_runtime.cli:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.0",
  "ruff>=0.6.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ix_autonomy_assurance_case_runtime = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--strict-config",
  "--strict-markers",
  "-q"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "N",
  "SIM",
  "UP",
  "W"
]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_configs = true
